# recif

./: .dockerignore  .env.example  .gitignore  .golangci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  go.mod  go.sum  recif  sqlc.yaml
.github/workflows/: ci.yml  release.yml
.next/: trace  trace-build
charts/recif/: Chart.yaml  values.yaml
cmd/api/: main.go
cmd/recif/: main.go
dashboard/: .gitignore  Dockerfile  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts
dashboard/mocks/: mock-a-glass.html  mock-a-recif-v2.html  mock-a-recif.html  mock-b-linear.html  mock-c-ocean.html  mock-d-caustics.html  mock-e-depth.html
dashboard/src/: middleware.ts
internal/auth/: jwt.go  (+6 more)
maree/: Dockerfile  README.md  pyproject.toml
maree/maree/: __init__.py  cli.py  config.py  models.py  pipeline.py
maree/maree.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
maree/maree/processors/: __init__.py  base.py  factory.py  semantic_chunker.py  text_chunker.py
maree/maree/sources/: __init__.py  base.py  connector.py  factory.py  file_source.py
maree/maree/stores/: __init__.py  base.py  factory.py  pgvector.py
maree/maree/transformers/: __init__.py  base.py  embedding.py  factory.py  gcp_auth.py  vertex_embedding.py
maree/tests/: test_models.py  test_pipeline.py  test_text_chunker.py
proto/: buf.yaml
scripts/: e2e-test-k8s.sh  e2e-test.sh  gen-dev-certs.sh  setup-local-k8s.sh  teardown-local-k8s.sh
widget/: index.html  package-lock.json  package.json  vite.config.ts
(+186 files in other folders)
